--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,3 @@
 PORT=3000
-MONGO_URI=mongodb+srv://yourUser:yourPass@cluster.mongodb.net/todolist 
+# 实际开发时请替换为你的MongoDB连接字符串
+MONGO_URI=mongodb+srv://username:password@your-cluster-url/database-name 
