--- a/render.yaml
+++ b/render.yaml
@@ -7,6 +7,7 @@ services:
     startCommand: npm run start:prod
     envVars:
       - key: MONGO_URI
-        value: mongodb+srv://yourUser:yourPass@cluster.mongodb.net/todolist
+        # 这个值需要在Render部署时手动设置，不应在代码仓库中包含实际凭证
+        value: MONGODB_URI_FROM_RENDER_DASHBOARD
       - key: PORT
         value: 3000
